# Canada_finanace

./: .dockerignore  .gitignore  AUDIT.md  Dockerfile  README.md  app.py  canada_finance.spec  pyproject.toml  requirements.txt  start.bat  start.sh
banks/: bmo_chequing.yaml  cibc_chequing.yaml  national_bank.yaml  rbc_chequing.yaml  scotiabank.yaml  tangerine_credit.yaml  tangerine_debit.yaml  td_chequing.yaml  wealthsimple.yaml
canada_finance/: __init__.py  config.py
canada_finance/models/: database.py
canada_finance/routes/: __init__.py  accounts.py  import_export.py  main.py  settings.py  summary.py  transactions.py
canada_finance/services/: categorization.py  csv_parser.py  helpers.py
canada_finance/static/: manifest.json  sw.js
canada_finance/static/css/: style.css
canada_finance/static/js/: app.js
canada_finance/templates/: index.html
rules/templates/: carpool_commuter.yaml  default.yaml  freelancer.yaml  self_employed.yaml  student.yaml
sample_data/: rbc_chequing_march2026.csv  tangerine_chequing_april2026.csv  tangerine_chequing_february2026.csv  tangerine_chequing_march2026.csv
tests/: conftest.py  test_bank_detection.py  test_categories.py  test_demo.py  test_import_export.py  test_migrations.py  test_new_features.py  test_new_features_v2.py  test_progressive_disclosure.py  test_summary.py
