[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boreal"
version = "1.0.0"
description = "Boreal — Personal Finance Dashboard for Canadians"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "pyyaml>=6.0",
    "fpdf2>=2.7.0",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
canada-finance = "canada_finance:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["canada_finance*"]

[tool.setuptools.package-data]
canada_finance = ["templates/**", "static/**"]
